@@ -1,3 +1,7 @@
+2015-03-26  Tejas Belagod  <tejas.belagod@arm.com>
+
+	* ld-aarch64/farcall-back-be.d: New.
+
 2015-03-26  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/18160
