@@ -1,3 +1,8 @@
+2015-03-26  Tejas Belagod  <tejas.belagod@arm.com>
+
+	* elfnn-aarch64.c (aarch64_build_one_stub): Replace the call to generic
+	_bfd_final_link_relocate with aarch64_relocate.
+
 2015-03-26  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/18160
